--- a/app/index.html
+++ b/app/index.html
@@ -48,9 +48,9 @@
         const user = await response.json();
         console.log(JSON.stringify(user));
 
-        document.getElementById('name').textContent = user.name ? user.name : 'Anna Smith';
-        document.getElementById('email').textContent = user.email ? user.email : 'anna.smith@example.com';
-        document.getElementById('interests').textContent = user.interests ? user.interests : 'coding';
+        document.getElementById('name').textContent = user.name ? user.name : 'John Doe';
+        document.getElementById('email').textContent = user.email ? user.email : 'johndoe@example.com';
+        document.getElementById('interests').textContent = user.interests ? user.interests : 'devops';
 
         const cont = document.getElementById('container');
         cont.style.display = 'block';
